Fix reply message truncation on 2 lines (#12929)
* Fix reply message truncation on 2 lines

* Add e2e tests for reply

--- a/res/css/views/elements/_ReplyChain.pcss
+++ b/res/css/views/elements/_ReplyChain.pcss
@@ -25,7 +25,7 @@ limitations under the License.
             white-space: nowrap; /* Enforce 'In reply to' to be a single line */
             color: $secondary-content;
             transition: color ease 0.15s;
-            font-weight: var(--cpd-font-weight-normal);
+            font-weight: var(--cpd-font-weight-regular);
             text-decoration: inherit;
 
             &:hover {
